# University-Gnss_Tool

./: README.txt
Gnss_Tool/: CMakeLists.txt  Gnss_Tool.pro
Gnss_Tool/CorePlatform/: CorePlatform.pro
Gnss_Tool/CorePlatform/CorePlatform_src/: CorePlatform_src.pro  baselogger.cpp  baselogger.h  controls.h  coreplatform.cpp  coreplatform.h  coreplatform_global.h  platformlogic_global.h  platformmodule.cpp  platformmodule.h
Gnss_Tool/CorePlatform/CorePlatform_test/: CorePlatform_test.pro  testplatform.cpp  testplatform.h  tst_coreplatform_test.cpp
Gnss_Tool/GPStationServer/: GPStationServer.pro
Gnss_Tool/GPStationServer/GPStationServer_src/: GPStationServer_src.pri  GPStationServer_src.pro  abstractserver.cpp  console.cpp  datahandler.cpp  gnssdata.h  gnssdatahandler.cpp  gnssdatahandler.h  iserverresponder.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  settings.ini  terminal.qrc  timegraph.cpp  timegraph.h  timegraph.ui  version.h
Gnss_Tool/GPStationServer/GPStationServer_test/: GPStationServer_test.pro  test_settings.ini  tst_testmain.cpp
Gnss_Tool/Utils/: Utils.pro  gnssdata.h  settingsreader.cpp  settingsreader.h  utils.cpp  utils.h
Gnss_Tool/gpstation6_agent/: CMakeLists.txt
Gnss_Tool/gpstation6_agent/include/: abstractserver.h  datahandler.h  gpstationserver.h  mainwindow.h  settingsdialog.h
Gnss_Tool/gpstation6_agent/src/: abstractserver.cpp  console.cpp  gpstationserver.cpp  mainwindow.cpp  settingsdialog.cpp
Gnss_Tool/gpstation6_agent/ui/: mainwindow.ui  settingsdialog.ui
Gnss_Tool/iri_model/: CMakeLists.txt
Gnss_Tool/iri_model/c_adapter/: CMakeLists.txt  iri_adapter.c
Gnss_Tool/iri_model/c_adapter/include/: iri_adapter.h
Gnss_Tool/iri_model/c_adapter/src/: iri_adapter.c  iri_adapter.cpp
Gnss_Tool/iri_model/iri_2012/: CMakeLists.txt
Gnss_Tool/iri_model/iri_2012/fortran_src/: CMakeLists.txt  igrf.for  irifun.for  iriinvk.for  irisub.for
Gnss_Tool/platform/: CMakeLists.txt
Gnss_Tool/platform/core/: CMakeLists.txt
Gnss_Tool/platform/core/include/: platformcore.h  platformcore_global.h
Gnss_Tool/platform/core/src/: platformcore.cpp
Gnss_Tool/platform/core/transport/: CMakeLists.txt
Gnss_Tool/platform/core/transport/include/: ServiceList.h
Gnss_Tool/platform/core/transport/src/: Transport.cpp
Gnss_Tool/platform/gui/: CMakeLists.txt  gui_app.qrc  platformConfig.json  serviceList.json  settings.ini
Gnss_Tool/platform/gui/include/: mainwindow.h  platformconfig.h
Gnss_Tool/platform/gui/src/: main.cpp  mainwindow.cpp  platformconfig.cpp
Gnss_Tool/platform/gui/ui/: mainwindow.ui
Gnss_Tool/platform/services/: CMakeLists.txt
Gnss_Tool/platform/services/db_adapter/: CMakeLists.txt
Gnss_Tool/platform/services/gpstation6_adapter/: CMakeLists.txt
Gnss_Tool/platform/services/gpstation6_adapter/ifce/: IGP6Adapter.cpp  IGP6Adapter.h
Gnss_Tool/platform/services/gpstation6_adapter/impl/: Context.cpp  Context.h  GP6Adapter.cpp  GP6Client.cpp  GP6Client.h  GP6Parser.cpp  GP6Parser.h  manifest.json
Gnss_Tool/platform/services/gpstation6_adapter/impl/rtk/: novatel.c  rcvraw.c  rtkcmn.c  rtklib.h  sbas.c
Gnss_Tool/platform/services/logger/: CMakeLists.txt
Gnss_Tool/platform/services/logger/ifce/: ILogger.h
Gnss_Tool/platform/services/logger/impl/: Logger.cpp  manifest.json
Gnss_Tool/platform/services/src/: AbstractService.h  GnssData.h
Gnss_Tool/platform/services/transport_dispatcher/: CMakeLists.txt
Gnss_Tool/platform/services/transport_dispatcher/impl/: Transport.cpp
Gnss_Tool/tests/: CMakeLists.txt
Gnss_Tool/tests/unit/: CMakeLists.txt
Gnss_Tool/tests/unit/res/: test_settings.ini
Gnss_Tool/tests/unit/src/: IriTest.cpp  MicroserviceTests.cpp  UtilsTest.cpp  main.cpp
Gnss_Tool/utils/: CMakeLists.txt
Gnss_Tool/utils/include/: gnssdata.h  settingsreader.h  timestruct.h  utils.h
Gnss_Tool/utils/src/: settingsreader.cpp
